<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:textSize="90sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/usd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickUSD"
                android:text="@string/usd"
                android:textSize="40sp" />

            <Button
                android:id="@+id/gbp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickGBP"
                android:text="@string/gbp"
                android:textSize="40sp" />

            <Button
                android:id="@+id/eur"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickEUR"
                android:text="@string/eur"
                android:textSize="40sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/aud"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickAUD"
                android:text="@string/aud"
                android:textSize="40sp" />

            <Button
                android:id="@+id/jpy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickJPY"
                android:text="@string/jpy"
                android:textSize="40sp" />

            <Button
                android:id="@+id/chf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="clickCHF"
                android:text="@string/chf"
                android:textSize="40sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/userInput"
        android:inputType="numberDecimal"
        android:textAlignment="center" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="clickClear"
        android:text="@string/mainClear" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="clickSettings"
        android:text="@string/mainSettings" />


</androidx.appcompat.widget.LinearLayoutCompat>